<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="286dp"
        android:layout_height="161dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/delete_message"
        android:textAlignment="center"
        android:textColor="@color/description_text"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="415dp"
        android:layout_height="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/navbar_temp_4" />

    <EditText
        android:id="@+id/email_input5"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/text_box_background"
        android:elevation="5dp"
        android:hint="@string/ent_password"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#8A000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input6" />

    <EditText
        android:id="@+id/email_input6"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/text_box_background"
        android:elevation="5dp"
        android:hint="@string/ent_username"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#8A000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="108dp"
        android:background="@color/nav_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="284dp"
        android:layout_height="34dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/edt_password"
        android:textAlignment="viewStart"
        android:textColor="@color/description_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="284dp"
        android:layout_height="34dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/settings_heading"
        android:textAlignment="viewStart"
        android:textColor="@color/nevy_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/notification_btn"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bell" />

    <Button
        android:id="@+id/button10"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_box_background_red"
        android:elevation="5dp"
        android:padding="16dp"
        android:text="@string/conf_btn"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/email_input5" />

    <Button
        android:id="@+id/button11"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_outline"
        android:elevation="5dp"
        android:padding="16dp"
        android:text="@string/Cancel_btn"
        android:textAllCaps="true"
        android:textColor="@color/btn_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input5" />


</androidx.constraintlayout.widget.ConstraintLayout>