<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/resetPassword2"
        android:layout_width="314dp"
        android:layout_height="65dp"
        android:layout_marginTop="22dp"
        android:text="@string/resetPasswordDesc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="324dp"
        android:layout_height="42dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/resetPasswordHeading"
        android:textAlignment="center"
        android:textColor="@color/nevy_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/text_box_background"
        android:elevation="5dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#8A000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword2" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="368dp"
        android:layout_height="64dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/btn_box_background"
        android:elevation="5dp"
        android:padding="16dp"
        android:text="@string/submitBtn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetEmail" />

    <TextView
        android:id="@+id/backToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/backToLogin"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>